# QtLinkUniversal

./: .gitignore  CMakeLists.txt
include/: mainwindow.h
src/: mainwindow.cpp
ui/: mainwindow.ui
